[XForms] NPOTDB Fix empty default namespace submission problem. Bug 445285, r=doronr+olli